# investec-api-rust

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
src/: client.rs  lib.rs  request.rs  response.rs  tests.rs  token.rs
