[package]
name = "investec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
thiserror = "1.0.50"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
